Feed list thumbnails are now left just and no longer overlap content. switched active link color back to JQM default.

--- a/uportal-war/src/main/webapp/media/skins/muniversality/common/scss/_theme.scss
+++ b/uportal-war/src/main/webapp/media/skins/muniversality/common/scss/_theme.scss
@@ -91,10 +91,6 @@
 		
 		@include button();
 		
-		.ui-li {
-			@include gradient(#fcfcfc, #ededed);
-		}
-		
 		.ui-li-divider {
 			border-color	: $c1dark;
 			border-top		: 1px solid $c1light;
@@ -122,10 +118,10 @@
 	.portal-nav {
 		.portlet {
 			.icon {
-				/*border: 1px solid $c1darkest;
-				background: $c1;
-				@include gradient($c1, $c1dark);
-				@include rounded(5px);*/
+				//border: 1px solid $c1darkest;
+				//background: $c1;
+				//@include gradient($c1, $c1dark);
+				//@include rounded(5px);
 			}
 		}
 	}
